# SocialTradeHub-1

./: .replit  app.py  create_default_pages.py  create_demo_footer_pages.py  create_footer_pages.py  create_icons.py  demo.py  fix_database.py  forms.py  initialize_pages.py  migrate_db.py  models.py  pyproject.toml  replit.md  routes.py  routes_simple.py  run.py  start_server.py
attached_assets/: Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-flask-limiter-extension-py-324-User-1753189399302_1753189399303.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-account-detail-1753202366215_1753202366217.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-account-detail-1753202900091_1753202900092.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-page-with-val-1753195373599_1753195373600.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-wallet-Did-y-1753189978015_1753189978017.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-notifi-1753194666097_1753194666099.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-settin-1753192454948_1753192454950.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-settin-1753194526244_1753194526245.txt  (+7 more)
instance/: social_marketplace.db
static/: sw.js
templates/: account_detail.html  base.html  (+9 more)
(+20 files in other folders)
